--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <title>iframe</title>
     </head>
     <body>
-      <iframe  width="500" height="500" name="frame"></iframe><br>
-    <a href="articles.html" target="frame">articles</a><br>
-    <a href="prod.html" target="frame">prod</a><br>  
-    <a href="images/pink.jpg" target="frame">Layne</a><br>
+      <iframe src="https://goo.gl/maps/WoseadUZbV3QaktN8"  width="500" height="500" ></iframe><br>
+
     </body>
 </html>
